// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Class ScrewStep should be initialized successfully 1`] = `
ClsScrewStep {
  "_activePoints": Array [],
  "_apis": Object {
    "updateStatus": [Function],
  },
  "_data": Object {},
  "_desc": "this is a screw step",
  "_id": "0001",
  "_info": Object {},
  "_name": "name",
  "_onLeave": null,
  "_orderOperationPoints": undefined,
  "_payload": Object {},
  "_runningStatusTask": null,
  "_skippable": false,
  "_stateToRun": "entering",
  "_status": "ready",
  "_statusTasks": Object {
    "doing": [Function],
    "entering": [Function],
    "fail": [Function],
    "finished": [Function],
  },
  "_steps": Array [],
  "_times": Array [],
  "_tools": Array [],
  "_type": "screw",
  "_undoable": false,
  "isValid": true,
  "run": [Function],
  "timerStart": [Function],
  "timerStop": [Function],
  "updateData": [Function],
}
`;

exports[`Class ScrewStep should be updated successfully 1`] = `
ClsScrewStep {
  "_activePoints": Array [],
  "_apis": Object {
    "updateStatus": [Function],
  },
  "_data": Object {},
  "_desc": "",
  "_id": "0001",
  "_info": Object {
    "time": "00:02:00",
  },
  "_name": "拧紧作业指导 pset",
  "_onLeave": null,
  "_orderOperationPoints": undefined,
  "_payload": Object {
    "controllerMode": "pset",
    "image": "test-file-stub",
    "points": Array [
      Object {
        "group_sequence": 1,
        "is_key": true,
        "maxRetryTimes": 3,
        "pset": 1,
        "sequence": 1,
        "toolSN": "1",
        "x": 10,
        "y": 10,
      },
      Object {
        "group_sequence": 2,
        "is_key": true,
        "maxRetryTimes": 3,
        "pset": 1,
        "sequence": 2,
        "toolSN": "1",
        "x": 20,
        "y": 20,
      },
      Object {
        "group_sequence": 3,
        "is_key": false,
        "maxRetryTimes": 3,
        "pset": 1,
        "sequence": 3,
        "toolSN": "2",
        "x": 30,
        "y": 30,
      },
      Object {
        "group_sequence": 3,
        "is_key": true,
        "maxRetryTimes": 3,
        "pset": 1,
        "sequence": 4,
        "toolSN": "1",
        "x": 40,
        "y": 40,
      },
      Object {
        "group_sequence": 4,
        "is_key": true,
        "maxRetryTimes": 3,
        "pset": 1,
        "sequence": 5,
        "toolSN": "1",
        "x": 50,
        "y": 50,
      },
    ],
  },
  "_runningStatusTask": null,
  "_skippable": false,
  "_stateToRun": "entering",
  "_status": "ready",
  "_statusTasks": Object {
    "doing": [Function],
    "entering": [Function],
    "fail": [Function],
    "finished": [Function],
  },
  "_steps": Array [],
  "_times": Array [],
  "_tools": Array [],
  "_type": "screw",
  "_undoable": true,
  "isValid": true,
  "run": [Function],
  "timerStart": [Function],
  "timerStop": [Function],
  "updateData": [Function],
}
`;
